# src/user/dto/create-user-request.dto.ts
@@ -1,0 +1,15 @@
+import { CreateUserDto } from './create-user.dto';
+import { CreateTeacherRequestDto } from '../../teacher/dto/create-teacher-request.dto';
+import { ValidateNested, IsOptional } from 'class-validator';
+import { Type } from 'class-transformer';
+
+export class CreateUserRequestDto {
+  @ValidateNested()
+  @Type(() => CreateUserDto)
+  user: CreateUserDto;
+
+  @IsOptional()
+  @ValidateNested()
+  @Type(() => CreateTeacherRequestDto)
+  teacher?: CreateTeacherRequestDto;
+}
